--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
@@ -18,16 +18,16 @@
     "\n",
     "* TensorFlow’s api is built around the idea of a computational graph, a way of performing a mathematical process.\n",
     "\n",
-    "> TensorFlow separates the definition of computations from their execution by having them happen in separate places: a `graph` defines the operations, but the operations only happen within a `session`. Graphs and sessions are created independently. A graph is like a blueprint, and a session is like a construction site. Details refer to [Graphs and Sessions](https://www.tensorflow.org/versions/r1.3/programmers_guide/graphs)\n",
+    "> TensorFlow separates the defining of a computational graph from executing that computational graph by having them happen in separate places: a `graph` defines the operations, but the operations only happen within a `session`. Graphs and sessions are created independently. A graph is like a blueprint, and a session is like a construction site. Details refer to [Graphs and Sessions](https://www.tensorflow.org/versions/r1.3/programmers_guide/graphs)\n",
     "\n",
     "<img src=\"images/tf_graph.png\" alt=\"tf_graph\" style=\"width:60%;height:60%\"/>\n",
     "\n",
-    "* Each node represents a operation (variable and placeholder are all operations) holding some values or computational logits performing some computation on other values. \n",
+    "* [to to edited] Each node represents a operation (variable and placeholder are all operations) holding some values or computational logits performing some computation on other values. \n",
     "    * For example, in above graph, A, B and D are variables/placeholders while C and E are computational logits that perform computation on A, B and C, D respectively.\n",
     "* Note that: when we are constructing the graph, values are not known and they are represented by either `variables` or `placeholders`\n",
     "* When we start running the computation on the constructed graph, we will feed values into the graph through the variables and placeholders.\n",
-    "    * `Variables` store values that can be updated during computation and are initialized just before (each run of) graph computation. Typically, weights and biases are represented by variables.\n",
-    "    * `Placeholders` store values that can not be updated during the computation and are provided by user (of the graph). Typically, training, testing samples and some hyperparameters are represented by placeholders.\n",
+    "    * `Variables` store values that can be updated during computation and are initialized before graph computation You must explicitly call operation like tf.global_variables_initializer with session.run to initialize all variables. Typically, weights and biases are represented by variables.\n",
+    "    * `Placeholders` store values that can not be updated during the computation and are provided by user (outside of the graph). Typically, external inputs such as training, testing samples and some hyperparameters are represented by placeholders.\n",
     "\n",
     "**Why Graph**\n",
     "* One obvious reason is that Neural Network is essentially a graph\n",
@@ -245,6 +245,17 @@
    "metadata": {},
    "source": [
     "## 2. TensorFlow Basics\n",
+    "\n",
+    "\n",
+    "### What are Tensors?\n",
+    "\n",
+    "* Tensors are the standard way of representing data in TensorFlow.\n",
+    "* Tensors are multidimensional arrays, an extension of two-dimensional tables (matrices) to data with higher dimension.\n",
+    "    * Tensors with rank 0 is scalar\n",
+    "    * Tensors with rank 1 is vector\n",
+    "    * Tensors with rank 2 is matrix (table of numbers)\n",
+    "    * Tensors with rank 3 is 3-tensor (cube of numbers)\n",
+    "    * Tensors with rank 4 or higher, you image it\n",
     "\n",
     "### tf.placeholder()\n",
     "\n",
