--- a/deep-learning-fundamentals/hyperparameters_tuning.ipynb
+++ b/deep-learning-fundamentals/hyperparameters_tuning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choosing Hyperparameters Automatically\n",
+    "# Systematically Tuning Hyperparameters\n",
     "\n",
     "* Many hyperparameters to optimize\n",
     "    * learning rate / decay rate\n",
@@ -111,11 +111,14 @@
    "source": [
     "## Random Search\n",
     "* Instead of looking at every possiblility, move in random directions until score is improved\n",
+    "    * Fine to coarse strategy\n",
+    "    * Coarse to fine strategy\n",
     "* In pseudo code\n",
-    "```\n",
+    "\n",
+    "```python\n",
     "theta = random position in hyperparameter space\n",
     "score_1 = cross_validation(theta, data)\n",
-    "for in in range(max_iterations):\n",
+    "for i in range(max_iterations):\n",
     "    next_theta = sample from hypersphere around theta\n",
     "    score_2 = cross_valication(next_theta, data)\n",
     "    if score_2 is better then score_1:\n",
