--- a/natural_language_process/embeddings/word_embeddings_foundation.ipynb
+++ b/natural_language_process/embeddings/word_embeddings_foundation.ipynb
@@ -228,8 +228,7 @@
     "* The embedding layer contains a embedding matrix with shape `(vocabulary size, dimension of word vectors)`\n",
     "* The largest integer (i.e. word index) in the input should be no larger than the vocabulary size. \n",
     "* The layer outputs a tenso of shape `(batch size, max input length, dimension of word vectors)`.\n",
-    "\n",
-    "The first step is to convert all your training sentences into lists of indices, and then zero-pad all these lists so that their length is the length of the longest sentence. "
+    "    * Note that the second dimension `max input length` is also frequently refered as `time step` dimension."
    ]
   },
   {
