--- a/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
@@ -742,7 +742,7 @@
    "source": [
     "**Stopwords not include negation word and other words**\n",
     "\n",
-    "\"beyong\", \"over\", \"very\""
+    "\"beyond\", \"over\", \"very\""
    ]
   },
   {
