Update convolution document and init VGG project

--- a/convolutional-neural-network/computing_dimension_in_CNN.ipynb
+++ b/convolutional-neural-network/computing_dimension_in_CNN.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "A single image fed into a convolutional layer $l$ is represented as a 3-dimensional array, where each element represents a pixel intensity. This image has pixel height $n_H^{[l-1]}$, pixel width $n_W^{[l-1]}$, and the number of channels (aka depth) $n_C^{[l-1]}$. \n",
     "* In the first convolutional layer, the images fed in are original images that are either RGB images or grayscale images. The number of channels $n_C^{[0]}$ is either 3 or 1. \n",
-    "* In a intermediate convolutional layer $l$, the images fed in are transformed images (across previous layers). The number of channels $n_C^{[l-1]}$ can be arbitrary number depeneding on the network architect.\n",
+    "* In a intermediate convolutional layer $l$, the images fed in are transformed images (also called feature maps) outputed from previous layer. The number of channels $n_C^{[l-1]}$ can be arbitrary number depeneding on the network architect.\n",
     "\n",
     "A single filter is also represented as a 3-dimensional array. It has a height and width $f^{[1]}$ (height and width are typically the same) and channels $n_C^{[l-1]}$. \n",
     "> Note that the number of channels of the filter must match the number of channels of the image upon which the filter acts. This is why we denote the channels of the filter as $n_C^{[l-1]}$, the output channels of previous convolutional layer.\n",
