--- a/convolutional-neural-network/convolution_layer.ipynb
+++ b/convolutional-neural-network/convolution_layer.ipynb
@@ -240,8 +240,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Take away\n",
-    "* Now you know that there are some possible filters that help us detect features. So, perhaps it would be possible to just do a convolution in neural network and use gradient descent to find the best possible fiters. "
+    "### Take away\n",
+    "\n",
+    "> Now you know that there are some possible filters that help us detect features. So, perhaps it would be possible to just do a convolution in neural network and use gradient descent to find the best possible fiters. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filters in convolution layer"
    ]
   },
   {
@@ -250,11 +258,82 @@
    "source": [
     "* Generally, a convolutional layer transforms a set of feature-maps comming out of previous layer into an new set of feature-maps. The actual transforming work is performed by filters of this convolutional layer. A convolutional layer contains a stack of filters.\n",
     "* More specifically, in a convolutional layer:\n",
-    "    * Each filter takes in feature-maps comming out of previous layer and generates/outputs an new feature (also called activation) map. Therefore, Filter and feature-map out have one-to-one relationship.\n",
-    "    * You define the number of filters and thus the number of feature-maps out.\n",
-    "    * Feature-maps comming out would be the input of the next (convolutional/pooling) layer. You can think of a feature-map as a filtered image comming out a filter.\n",
-    "    * Each filter has 3 dimensions: width, height and number of feature-maps comming in.\n",
-    "    * Therefore, convolutional layer has 4 dimensions formed by a stack of filters and the 4 dimensions are width, height, number of feature-maps comming in and number of feature-maps comming out."
+    "    * Each filter takes in feature-maps comming out of previous layer and generates an new feature (also called activation) map. Therefore, the number of filters you defined in a convolutional layer determined the number of feature-maps coming out of that convolutional layer.\n",
+    "    * Feature-maps comming out of previous layer would be the input of the next (convolutional/pooling) layer. You can think of a feature-map as a filtered image comming out a filter.\n",
+    "    * Each filter has 3 dimensions: width, height and number of feature-maps comming in (for the first convolutional layer that takes original images as input, the number of feature-maps is 3 corresponging to color channels).\n",
+    "    * Therefore, a convolutional layer contains a stack of filters that are 4 dimensions, and the 4 dimensions are \n",
+    "        * `filter width`, `filter height`, `number of feature-maps comming in` and `number of feature-maps comming out`.\n",
+    "        * We typically define `filter width` and `filter height` as the same number, and call them `filter size`.\n",
+    "        * Each filter is a 3D weight matrix and a stack of them is a 4D weight matrix. Following shows two filters forming a 4D wight matrix.\n",
+    "        \n",
+    "<img src=\"images/filter_weights.png\" alt=\"Drawing\" style=\"width:50%;height:50%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a general fully connected layer, for a single data point, transformations of data from one layer are of the form $g(w \\cdot x + b)$, where $g$ is an activation function, $w$ is a vector of weights, $\\cdot$⋅ is a dot product (sum of an elementwise product), and $b$ is an offset or bias term (a single number in this example). The model learns the weights $w$ and offset $b$ through a numerical optimization scheme. Convolutional layers work similarly, but the data is arranged a little differently."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a layer of a convolutional network, the input image (or feature maps) is split into multiple small regions. The size of each small region is determined by the `filter size` and location of each small region is defined by the `stride`.\n",
+    "\n",
+    "For each small region, a filter, say W, produces a single numerical value by first performing a element-wise multiplication with that small region and then summing over elements of that multiplication. After filter W repeated the same computation with all small regions, all numerical values produced by filter W form a feature map.  \n",
+    "\n",
+    "<img src=\"images/applying_filter.png\" alt=\"Drawing\" style=\"width:40%;height:40%\"/>\n",
+    "\n",
+    "Each filter follows the same operation as filter W did, the output is a stack of feature maps, the number of which equals the number of filters. \n",
+    "\n",
+    "Following shows the animation of the aforementationed process (two filters with padding):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/conv_computation.gif\" alt=\"Drawing\" style=\"width:60%;height:60%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we add a bias to each of these feature maps and feed them into the activation function (e.g., relu). As a result, we get the final version of feature maps that ready to pass over to the next layer.\n",
+    "\n",
+    "Following picture shows the overview of a convolutional layer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/a_layer_example.png\" alt=\"example of a convolutional layer\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stride in convolution layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One last issue remains. We still need to boil the information down. Traditionally, this was done by a \"max-pooling\" layer. Even if there are simpler ways today, \"max-pooling\" helps understand intuitively how convolutional networks operate: if you assume that during training, our little patches of weights evolve into filters that recognise basic shapes (horizontal and vertical lines, curves, ...) then one way of boiling useful information down is to keep through the layers the outputs where a shape was recognised with the maximum intensity. In practice, in a max-pool layer neuron outputs are processed in groups of 2x2 and only the one max one retained.\n",
+    "\n",
+    "A simpler way is using `stride` that is the number of steps to step over on the input image to do convolution with the filter. If you slide the patches across the image with a `stride` of 2 pixels instead of 1, you also obtain fewer output values. This approach has proven just as effective and today's convolutional networks use convolutional layers only.\n",
+    "\n",
+    "Let us build a convolutional network as an example. We will use three convolutional layers at the top, our traditional softmax layer at the bottom and connect them with one fully-connected layer:\n",
+    "\n",
+    "<img src=\"images/conv_with_stride.png\" alt=\"example of a convolutional layer\", style=\"width:70%;height:70%\"/>\n",
+    "\n",
+    "Notice that the second and third convolutional layers have a stride of two (with padding = 'SAME') which explains why they bring the number of output values down from 28x28 to 14x14 and then 7x7. The sizing of the layers is done so that the number of neurons goes down roughly by a factor of two at each layer: 28x28x4≈3000 → 14x14x8≈1500 → 7x7x12≈500 → 200. Jump to the next section for the implementation."
    ]
   },
   {
@@ -286,12 +365,12 @@
     "    shape=[None, image_height, image_width, color_channels])\n",
     "\n",
     "# Weight and bias\n",
-    "filter = tf.Variable(tf.truncated_normal(\n",
+    "filter_weights = tf.Variable(tf.truncated_normal(\n",
     "    [filter_size_height, filter_size_width, color_channels, k_output]))\n",
     "filter_bias = tf.Variable(tf.zeros(k_output))\n",
     "\n",
     "# Apply Convolution\n",
-    "conv_layer = tf.nn.conv2d(input, filter, strides=[1, 2, 2, 1], padding='SAME')\n",
+    "conv_layer = tf.nn.conv2d(input, filter_weights, strides=[1, 2, 2, 1], padding='SAME')\n",
     "# Add bias\n",
     "conv_layer = tf.nn.bias_add(conv_layer, filter_bias)\n",
     "# Apply activation function\n",
