Add documents on VGG

--- a/convolutional-neural-network/VGG/VGG_transfer_learning.ipynb
+++ b/convolutional-neural-network/VGG/VGG_transfer_learning.ipynb
@@ -227,6 +227,7 @@
     "zoom_range=0.2,\n",
     "horizontal_flip=True,\n",
     "vertical_flip=True,\n",
+    "# transform image from RGB to BGR that is used by VGG\n",
     "preprocessing_function=preprocess_input\n",
     ")"
    ]
@@ -334,6 +335,7 @@
     }
    ],
    "source": [
+    "# test that if the RGB images are transformed into BGR images\n",
     "for x, y in test_gen:\n",
     "    print(\"min:\", x[0].min(), \"max:\", x[0].max())\n",
     "    plt.title(labels[np.argmax(y[0])])\n",
@@ -577,6 +579,23 @@
     "## Reference\n",
     "\n",
     "* [Confusion matrix](https://en.wikipedia.org/wiki/Confusion_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Understand following matplotlib code\n",
+    "\n",
+    "```python\n",
+    "plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "plt.text(j, i, format(cm[i, j], fmt),\n",
+    "        horizontalalignment=\"center\",\n",
+    "        color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "        \n",
+    "plt.xticks(tick_marks, classes, rotation=45)\n",
+    "plt.yticks(tick_marks, classes)\n",
+    "```"
    ]
   },
   {
