Add document for ResNet

--- a/convolutional-neural-network/residual_networks/Residual_Networks_keras [S].ipynb
+++ b/convolutional-neural-network/residual_networks/Residual_Networks_keras [S].ipynb
@@ -54,7 +54,7 @@
    "source": [
     "## 1 - The problem of very deep neural networks\n",
     "\n",
-    "Last week, you built your first convolutional neural network. In recent years, neural networks have become deeper, with state-of-the-art networks going from just a few layers (e.g., AlexNet) to over a hundred layers.\n",
+    "In recent years, neural networks have become deeper, with state-of-the-art networks going from just a few layers (e.g., AlexNet) to over a hundred layers.\n",
     "\n",
     "> The main benefit of a very deep network is that it can represent very complex functions. It can also learn features at many different levels of abstraction, from edges (at the lower layers) to very complex features (at the deeper layers). \n",
     "\n",
@@ -3153,6 +3153,13 @@
     "- Kaiming He, Xiangyu Zhang, Shaoqing Ren, Jian Sun - [Deep Residual Learning for Image Recognition (2015)](https://arxiv.org/abs/1512.03385)\n",
     "- Francois Chollet's github repository: https://github.com/fchollet/deep-learning-models/blob/master/resnet50.py\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
