--- a/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
+++ b/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
@@ -32,7 +32,12 @@
     "\n",
     "We will start with setting up the dimensions of the Convolution filters, the weights, the biases. This is in many ways the trickiest part to using CNNs in TensorFlow. Once we have a sense of how to set up the dimensions of these attributes, applying CNNs will be far more straight forward.\n",
     "\n",
-    "Setup the strides, padding and filter weight/bias (F_w and F_b) such that the output shape is (1, 2, 2, 3). Note that all of these except strides should be TensorFlow variables."
+    "Setup the strides, padding and filter weight/bias (F_w and F_b) such that the output shape is (1, 2, 2, 3). Note that all of these except strides should be TensorFlow variables.\n",
+    "\n",
+    "\n",
+    "Computes a 2-D convolution given 4-D input and filter tensors.\n",
+    "\n",
+    "Given an input tensor of shape [batch, in_height, in_width, in_channels] and a filter / kernel tensor of shape [filter_height, filter_width, in_channels, out_channels], "
    ]
   },
   {
@@ -52,13 +57,13 @@
     "    [15, 1, 2, 3]], dtype=np.float32).reshape((1, 4, 4, 1))\n",
     "X = tf.constant(x)\n",
     "\n",
-    "def conv2d(input):\n",
+    "def conv2d(input_):\n",
     "    # Filter (weights and bias)\n",
     "    \n",
     "    # The shape of the filter weight is (height, width, input_depth, output_depth)\n",
     "    # The shape of the filter bias is (output_depth)\n",
     "    # Define the filter weights `F_W` and filter bias `F_b`.\n",
-    "    # NOTE: Remember to wrap them in `tf.Variable`, they are trainable parameters after all.\n",
+    "    # NOTE: Remember to wrap them in `tf.Variable`, they are trainable parameters.\n",
     "    F_W = tf.Variable(tf.random_normal([2, 2, 1, 3]))\n",
     "    F_b = tf.Variable(tf.random_normal([3]))\n",
     "    \n",
@@ -69,7 +74,7 @@
     "    \n",
     "    # https://www.tensorflow.org/versions/r0.11/api_docs/python/nn.html#conv2d\n",
     "    # `tf.nn.conv2d` does not include the bias computation so we have to add it ourselves after.\n",
-    "    return tf.nn.conv2d(input, F_W, strides, padding) + F_b\n"
+    "    return tf.nn.conv2d(input_, F_W, strides, padding) + F_b\n"
    ]
   },
   {
@@ -158,7 +163,7 @@
     "    [15, 1, 2, 3]], dtype=np.float32).reshape((1, 4, 4, 1))\n",
     "X = tf.constant(x)\n",
     "\n",
-    "def maxpool(input):\n",
+    "def maxpool(input_):\n",
     "    #  Set the ksize (filter size) for each dimension (batch_size, height, width, depth)\n",
     "    ksize = [1, 2, 2, 1]\n",
     "    #  Set the stride for each dimension (batch_size, height, width, depth)\n",
@@ -166,7 +171,7 @@
     "    # set the padding, either 'VALID' or 'SAME'.\n",
     "    padding = \"VALID\"\n",
     "\n",
-    "    return tf.nn.max_pool(input, ksize, strides, padding)"
+    "    return tf.nn.max_pool(input_, ksize, strides, padding)"
    ]
   },
   {
@@ -490,8 +495,7 @@
     "\n",
     "# Accuracy\n",
     "correct_pred = tf.equal(tf.argmax(prediction, 1), tf.argmax(Y, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
-    "\n"
+    "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))"
    ]
   },
   {
