Update convolutional neural network in Tensorflow

--- a/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
+++ b/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
@@ -29,15 +29,44 @@
    "source": [
     "## TensorFlow Convolution Layer\n",
     "\n",
+    "We use [tf.nn.conv2d](https://www.tensorflow.org/api_docs/python/tf/nn/conv2d) to build up a convolution layer. Following shows the signature of this function: \n",
     "\n",
-    "We will start with setting up the dimensions of the Convolution filters, the weights, the biases. This is in many ways the trickiest part to using CNNs in TensorFlow. Once we have a sense of how to set up the dimensions of these attributes, applying CNNs will be far more straight forward.\n",
+    "```python\n",
+    "tf.nn.conv2d(\n",
+    "    input,\n",
+    "    filter,\n",
+    "    strides,\n",
+    "    padding,\n",
+    "    use_cudnn_on_gpu=True,\n",
+    "    data_format='NHWC',\n",
+    "    dilations=[1, 1, 1, 1],\n",
+    "    name=None\n",
+    ")\n",
+    "```\n",
     "\n",
-    "Setup the strides, padding and filter weight/bias (F_w and F_b) such that the output shape is (1, 2, 2, 3). Note that all of these except strides should be TensorFlow variables.\n",
+    "Filters, strides and padding are three arguments that are most relevant to the convolutional computation. \n",
     "\n",
+    "* `filter`: A 4-D tensor of shape [filter_height, filter_width, in_channels, out_channels]\n",
+    "* `strides`: A 1-D tensor of length 4. The stride of the sliding window for each dimension of input. The dimension order is determined by the value of data_format that has the default value of \"NHWC, which specifies the data storage order of: [batch, height, width, channels].\n",
+    "* `padding`: A string from: \"SAME\", \"VALID\". The type of padding algorithm to use.\n",
     "\n",
-    "Computes a 2-D convolution given 4-D input and filter tensors.\n",
+    "With these arguments set up, the convolution layer takes an input tensor of shape `[batch, in_height, in_width, in_channels]` and outputs a tensor of shape `[batch, out_height, out_width, out_channels]`\n",
     "\n",
-    "Given an input tensor of shape [batch, in_height, in_width, in_channels] and a filter / kernel tensor of shape [filter_height, filter_width, in_channels, out_channels], "
+    "The `out_height` and `out_width` are determined by how we set up the filters, strides and padding. The formula for computing `out_height` and `out_width` in Tensorflow are:\n",
+    "\n",
+    "<b>SAME Padding</b>, the output height and width are computed as:\n",
+    "\n",
+    "> <b style='color:blue'>out_height</b> = <b style='color:red'>ceil( float(in_height) / float(strides[1]) )</b>\n",
+    "\n",
+    "> <b style='color:blue'>out_width</b> = <b style='color:red'>ceil( float(in_width) / float(strides[2]) )</b>\n",
+    "\n",
+    "<b>VALID Padding</b>, the output height and width are computed as:\n",
+    "\n",
+    "> <b style='color:blue'>out_height</b> = <b style='color:red'>ceil( float(in_height - filter_height + 1 ) / float(strides[1]))</b>\n",
+    "\n",
+    "> <b style='color:blue'>out_width</b> = <b style='color:red'>ceil( float(in_width - filter_width + 1 ) / float(strides[2]))</b>\n",
+    "\n",
+    "The following conv2d function setups the strides, padding and filter weight/bias (F_w and F_b) such that the output shape is (1, 2, 2, 3). Note that F_w and F_b are TensorFlow variables."
    ]
   },
   {
@@ -99,19 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to transform the input shape (1, 4, 4, 1) to (1, 2, 2, 3). We need to use tensorflow way of calculating the output shape:\n",
-    "\n",
-    "<b>SAME Padding</b>, the output height and width are computed as:\n",
-    "\n",
-    "> <b style='color:blue'>out_height</b> = <b style='color:red'>ceil( float(in_height) / float(strides[1]) )</b>\n",
-    "\n",
-    "> <b style='color:blue'>out_width</b> = <b style='color:red'>ceil( float(in_width) / float(strides[2]) )</b>\n",
-    "\n",
-    "<b>VALID Padding</b>, the output height and width are computed as:\n",
-    "\n",
-    "> <b style='color:blue'>out_height</b> = <b style='color:red'>ceil( float(in_height - filter_height + 1 ) / float(strides[1]))</b>\n",
-    "\n",
-    "> <b style='color:blue'>out_width</b> = <b style='color:red'>ceil( float(in_width - filter_width + 1 ) / float(strides[2]))</b>\n",
+    "We want to transform the input shape (1, 4, 4, 1) to (1, 2, 2, 3). We need to use tensorflow way of calculating the output shape, as shown above.\n",
     "\n",
     "I choose 'VALID' for the padding algorithm. I find it simpler to understand and it achieves the result I'm looking for:\n",
     "\n",
