Update convolutional neural network in Tensorflow.ipynb

--- a/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
+++ b/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
@@ -46,13 +46,13 @@
     "\n",
     "Filters, strides and padding are three arguments that are most relevant to the convolutional computation. \n",
     "\n",
-    "* `filter`: A 4-D tensor of shape [filter_height, filter_width, in_channels, out_channels]\n",
-    "* `strides`: A 1-D tensor of length 4. The stride of the sliding window for each dimension of input. The dimension order is determined by the value of data_format that has the default value of \"NHWC, which specifies the data storage order of: [batch, height, width, channels].\n",
+    "* `filter`: A 4-D tensor of shape `[filter_height, filter_width, in_channels, out_channels]`\n",
+    "* `strides`: A 1-D tensor of length 4. The stride of the sliding window for each dimension of input. The dimension order is determined by the value of data_format that has the default value of \"NHWC, which specifies the data storage order of: `[batch, height, width, channels]`.\n",
     "* `padding`: A string from: \"SAME\", \"VALID\". The type of padding algorithm to use.\n",
     "\n",
     "With these arguments set up, the convolution layer takes an input tensor of shape `[batch, in_height, in_width, in_channels]` and outputs a tensor of shape `[batch, out_height, out_width, out_channels]`\n",
     "\n",
-    "The `out_height` and `out_width` are determined by how we set up the filters, strides and padding. The formula for computing `out_height` and `out_width` in Tensorflow are:\n",
+    "The `out_height` and `out_width` are determined by the filters, strides and padding that we set up. The formula for computing `out_height` and `out_width` in Tensorflow are:\n",
     "\n",
     "<b>SAME Padding</b>, the output height and width are computed as:\n",
     "\n",
@@ -153,9 +153,45 @@
    "source": [
     "## TensorFlow Pooling Layers\n",
     "\n",
-    "Set up the dimensions of the pooling filters, strides, as well as the appropriate padding. You should go over the TensorFlow documentation for <b style='color:red'>[tf.nn.max_pool()](https://www.tensorflow.org/versions/r0.11/api_docs/python/nn.html#max_pool)</b>. Padding works the same as it does for a convolution.\n",
+    "Setting up the dimensions of the pooling window size, strides, as well as the appropriate padding. You should go over the TensorFlow documentation for <b style='color:red'>[tf.nn.max_pool()](https://www.tensorflow.org/versions/r0.11/api_docs/python/nn.html#max_pool)</b>. Strides and padding works the same as it does for a convolution.\n",
     "\n",
-    "Setup the strides, padding and ksize such that the output shape after pooling is (1, 2, 2, 1)."
+    "The function signature for `[tf.nn.max_pool()` shown as follow:\n",
+    "\n",
+    "```python\n",
+    "tf.nn.max_pool(\n",
+    "    value,\n",
+    "    ksize,\n",
+    "    strides,\n",
+    "    padding,\n",
+    "    data_format='NHWC',\n",
+    "    name=None\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "* `value`: The input. A 4-D Tensor of the format specified by data_format.\n",
+    "* `ksize`: A 1-D int Tensor of 4 elements. The size of the window for each dimension of the input tensor.\n",
+    "* `strides`: A 1-D int Tensor of 4 elements. The stride of the sliding window for each dimension of the input tensor.\n",
+    "* `padding`: A string, either 'VALID' or 'SAME'. The padding algorithm. See the comment here\n",
+    "* `data_format`: A string. 'NHWC', 'NCHW' and 'NCHW_VECT_C' are supported.\n",
+    "* `name`: Optional name for the operation.\n",
+    "\n",
+    "Note that Pooling layer does not shrink the size of channels of the input as the convolutional layer does. However, similar to convolutional layer, it can shrink the (2-D) size of feature maps of the input.\n",
+    "\n",
+    "**Setup the strides, padding and ksize such that the output shape after pooling is (1, 2, 2, 1).**\n",
+    "\n",
+    "We want to transform the input shape (1, 4, 4, 1) to (1, 2, 2, 1). We choose 'VALID' for the padding algorithm. \n",
+    "\n",
+    "> <b style='color:blue'>out_height</b> = <b style='color:red'>ceil(float(in_height - filter_height + 1) / float(strides[1]))</b>\n",
+    "\n",
+    "> <b style='color:blue'>out_width</b>  = <b style='color:red'>ceil(float(in_width - filter_width + 1) / float(strides[2]))</b>\n",
+    "\n",
+    "Plugging in the values:\n",
+    "\n",
+    "> out_height = ceil(float(4 - 2 + 1) / float(2)) = ceil(1.5) = 2\n",
+    "\n",
+    "> out_width  = ceil(float(4 - 2 + 1) / float(2)) = ceil(1.5) = 2\n",
+    "\n",
+    "The depth doesn't change during a pooling operation so I don't have to worry about that."
    ]
   },
   {
@@ -189,25 +225,6 @@
     "    padding = \"VALID\"\n",
     "\n",
     "    return tf.nn.max_pool(input_, ksize, strides, padding)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We want to transform the input shape (1, 4, 4, 1) to (1, 2, 2, 1). We choose 'VALID' for the padding algorithm. \n",
-    "\n",
-    "> <b style='color:blue'>out_height</b> = <b style='color:red'>ceil(float(in_height - filter_height + 1) / float(strides[1]))</b>\n",
-    "\n",
-    "> <b style='color:blue'>out_width</b>  = <b style='color:red'>ceil(float(in_width - filter_width + 1) / float(strides[2]))</b>\n",
-    "\n",
-    "Plugging in the values:\n",
-    "\n",
-    "> out_height = ceil(float(4 - 2 + 1) / float(2)) = ceil(1.5) = 2\n",
-    "\n",
-    "> out_width  = ceil(float(4 - 2 + 1) / float(2)) = ceil(1.5) = 2\n",
-    "\n",
-    "The depth doesn't change during a pooling operation so I don't have to worry about that."
    ]
   },
   {
@@ -513,6 +530,50 @@
     "# Accuracy\n",
     "correct_pred = tf.equal(tf.argmax(prediction, 1), tf.argmax(Y, 1))\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When using [tf.nn.softmax_cross_entropy_with_logits](https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits), you should be carefull about following several points:\n",
+    "\n",
+    "> This operation expects **unscaled logits**, since it performs a softmax on logits internally for efficiency. Do not call this op with the output of softmax, as it will produce incorrect results.\n",
+    "\n",
+    "> `logits` and `labels` must have the same shape, e.g. `[batch_size, num_classes]` and the same dtype (either float16, float32, or float64).\n",
+    "\n",
+    "> To avoid confusion, it is required to pass only named arguments to this function.\n",
+    "\n",
+    "The most important arguments for this function are:\n",
+    "* `labels`: Each row labels[i] must be a valid probability distribution.\n",
+    "* `logits`: Unscaled log probabilities.\n",
+    "* `dim`: The class dimension. Defaulted to -1 which is the last dimension.\n",
+    "\n",
+    "It returns a **1-D tensor of length `batch_size`** of the same type as logits with the softmax cross entropy loss.\n",
+    "\n",
+    "Backpropagation in this version of softmax cross entropy will happen only into logits. To calculate a cross entropy loss that allows backpropagation into both logits and labels, see [tf.nn.softmax_cross_entropy_with_logits_v2](https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits_v2)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[tf.reduce_mean](https://www.tensorflow.org/versions/r1.0/api_docs/python/tf/reduce_mean) computes the mean of elements across specified dimensions of a tensor.\n",
+    "\n",
+    "> Reduces input_tensor along the dimensions given in axis. Unless keep_dims is true, the rank of the tensor is reduced by 1 for each entry in axis. If keep_dims is true, the reduced dimensions are retained with length 1.\n",
+    "\n",
+    "> If axis has no entries, all dimensions are reduced, and a tensor with a single element is returned\n",
+    "\n",
+    "The most important arguments for this function:\n",
+    "* `input_tensor`: The tensor to reduce. Should have numeric type.\n",
+    "* `axis`: The dimensions to reduce. If None (the default), reduces all dimensions.\n",
+    "* `keep_dims`: If true, retains reduced dimensions with length 1.\n",
+    "\n",
+    "It returns the reduced tensor.\n",
+    "\n",
+    "As shown in the code, we are using `tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=Y))` to compute the loss of all the training examples in a mini-batch. \n",
+    "* `tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=Y)` computes a 1-D tensor in which each element is the softmax cross entropy value for one training example and there are totally `batch_size` of them.\n",
+    "* Then, the `tf.reduce_mean` computes the mean of the `batch_size` number of softmax cross entropy values.\n"
    ]
   },
   {
