Update convolutional neural network in Tensorflow.ipynb

--- a/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
+++ b/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "Setting up the dimensions of the pooling window size, strides, as well as the appropriate padding. You should go over the TensorFlow documentation for <b style='color:red'>[tf.nn.max_pool()](https://www.tensorflow.org/versions/r0.11/api_docs/python/nn.html#max_pool)</b>. Strides and padding works the same as it does for a convolution.\n",
     "\n",
-    "The function signature for `[tf.nn.max_pool()` shown as follow:\n",
+    "The function signature for `tf.nn.max_pool()` shown as follow:\n",
     "\n",
     "```python\n",
     "tf.nn.max_pool(\n",
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Max Pooling\n",
+    "\"### Max Pooling\n",
     "\n",
     "<img src=\"images/pooling_example.png\" alt=\"Drawing\"/>\n",
     "\n",
